Fix info button contrast (#1441)
* fix teal (btn-info) contrast

* use lowercase hex & color variables

* Use new variable for info text

--- a/TASVideos/wwwroot/css/partials/_colors.scss
+++ b/TASVideos/wwwroot/css/partials/_colors.scss
@@ -41,10 +41,10 @@ $warning: #ffa000;
 $warning-rgb: 255, 160, 0;
 $warning-dark: #ffc107;
 $warning-dark-rgb: 255, 193, 7;
-$info: #0aa3c2;
-$info-rgb: 10, 163, 194;
-$info-dark: #0bb8da;
-$info-dark-rgb: 11, 184, 218;
+$info: #065e6f;
+$info-rgb: 6, 94, 111;
+$info-dark: #067b93;
+$info-dark-rgb: 6, 123, 147;
 $success: #198754;
 $success-rgb: 25, 135, 84;
 $success-dark: #157347;
